--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "dingo/api": "^2.0.0-alpha2",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "socialiteproviders/weixin": "^4.0",
+        "doctrine/dbal": "v2.4.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
